<?xml version="1.0" encoding="UTF-8"?>
<resources>
  <string name="title_activity_about">About</string>
  <string name="title_activity_logcat" translatable="false">Logcat</string>
  <string name="menu_about">About</string>
  <string name="menu_logcat" translatable="false">Logcat</string>
  <string name="menu_logcat_refresh">Refresh</string>
  <string name="menu_logcat_clear">Clear</string>
  <string name="about_documentation"><![CDATA[<h3>Documentation</h3><p>A manual for the use of Secure SMS Proxy can be found here: <a href=https://github.com/frimtec/secure-sms-proxy/blob/master/README.md#secure-sms-proxy>Manual</a>.</p>]]></string>
  <string name="about_disclaimer"><![CDATA[<h3>Disclaimer</h3><p>The author assumes no responsibility, gives no guarantee when using the application.</p><p>The application is free. The source code is available as open source under the <a href=https://opensource.org/licenses/Apache-2.0>Apache 2.0 license</a>.</p>]]></string>
  <string name="general_no">No</string>
  <string name="general_yes">Yes</string>
  <string name="general_are_you_sure">Are you sure?</string>
  <string name="general_entry_deleted">Entry has been deleted.</string>
  <string name="permission_required">Required permission:</string>
  <string name="permission_sms_title">SMS send/receive</string>
  <string name="permission_sms_text">S2MSP only works with the permissions to send and receive SMS.
S2MSP provides SMS communication to other applications for previously authorized phone numbers.
The SMS exchange between S2MSP and authorized applications is always encrypted.
S2MSP uses no other permissions to ensure the security and integrity.
Due to new sideloading restrictions on Android 15 and above, \"Allow restricted settings\" must be enabled in the S2MSP \"App info\" dialog before the permissions can be granted!</string>
  <string name="send_log_title">Secure SMS Proxy crash report</string>
  <string name="send_log_message">S2MSP was crashed unexpectedly. To improve the stability of S2MSP, please send the crash report to the author via e-mail.</string>
  <string name="send_log_button_send">Send</string>
  <string name="action_delete">Delete</string>
  <string name="header_application">Application</string>
  <string name="header_phone_numbers">Allowed numbers</string>
  <string name="register_comment">The stated application requests permissions to send and receive SMS via S2MSP restricted to the following phone numbers:</string>
  <string name="register_reject">Reject</string>
  <string name="register_allow">Allow</string>
  <string name="permission_accepted">Permission was accepted.</string>
  <string name="permission_rejected">Permission was rejected!</string>
  <string name="content_description_logo">Application logo</string>
  <string name="image_description_permission_requesting_app_logo">Logo of the app that requests SMS permissions</string>
  <string name="image_description_s2msp_app_logo">S2MSP app logo</string>
  <string name="pref_title_app_language">App language</string>
  <string name="english" translatable="false">English</string>
  <string name="german" translatable="false">Deutsch</string>
  <string name="french" translatable="false">Français</string>
  <string name="italian" translatable="false">Italiano</string>
  <string name="system_language">System default</string>
  <string name="notification_battery_optimization_title">Battery optimization is on!</string>
  <string name="notification_battery_optimization_text">To work reliable on all devices, S2MSP should run with battery optimization turned off.</string>
  <string name="title_activity_application_rule_detail">Application Rule Detail</string>
  <string name="action_add">Add</string>
  <string name="application_rule_detail_add_phone_number_title">Add number</string>
  <string name="application_rule_detail_phone_number_hint">Number</string>
  <string name="main_add_application_title">Add application</string>
  <string name="main_no_applications_found">No suitable applications found!</string>
  <string name="header_phone_numbers_count">Allowed numbers count</string>
  <string name="application_rule_detail_statistics" translatable="false">↑️%1$d ↓️%2$d   ⟳%3$d ⊘ %4$d</string>
  <string name="application_rule_detail_statistics_tooltip"><![CDATA[↑️ SMS sent ↓ SMS received\n⟳ SMS loopback test\n⊘ SMS blocked to send]]></string>
  <string name="application_rule_detail_rule_statistics" translatable="false">↑️%1$d ↓️%2$d</string>
  <string name="application_rule_detail_rule_statistics_no_send" translatable="false">↓️%2$d</string>
</resources>
