<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logcat"
        android:icon="@drawable/ic_adb_white_24dp"
        android:title="@string/menu_logcat"
        app:showAsAction="ifRoom|withText"
        android:visible="false" />
    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/pref_title_app_language"
        android:visible="false"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/menu_about"
        app:showAsAction="always|withText" />

</menu>