<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    tools:context=".ui.AboutActivity">

    <ImageView
        android:id="@+id/send_log_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/image_description_s2msp_app_logo" />

    <TextView
        android:id="@+id/send_log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignBaseline="@id/send_log_logo"
        android:layout_toEndOf="@id/send_log_logo"
        android:text="@string/send_log_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/send_log_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_log_logo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/send_log_message"
        android:textSize="16sp" />

        <Button
            android:id="@+id/send_log_button_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_log_message"
            android:layout_toStartOf="@id/send_log_button_send"
            android:text="@string/general_no" />

        <Button
            android:id="@+id/send_log_button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_log_message"
            android:layout_alignParentEnd="true"
            android:text="@string/send_log_button_send" />
</RelativeLayout>
