<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/application_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_description_logo"
        app:srcCompat="@drawable/ic_android_24dp" />

    <TextView
        android:id="@+id/application_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/application_logo"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/application_logo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/application_label"
        android:layout_alignStart="@id/application_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/phone_numbers_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/application_logo"
        android:layout_marginTop="24dp"
        android:text="@string/header_phone_numbers"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/phone_numbers_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/add_phone_number_button"
        android:layout_below="@id/phone_numbers_header"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/add_phone_number_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/action_add" />

</RelativeLayout>
