<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    tools:context=".ui.AboutActivity">

    <ImageView
        android:id="@+id/register_application_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/ic_android_black_24dp" />

    <TextView
        android:id="@+id/register_application_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/register_application_icon"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_application_icon"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/register_comment"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/register_phone_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:textSize="17sp"/>

    <Button style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
        android:id="@+id/button_reject"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/register_reject"
        android:textStyle="bold"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:textSize="18sp" />

    <Button
        style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
        android:id="@+id/button_allow"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/register_allow"
        android:textStyle="bold"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:textSize="18sp" />


</RelativeLayout>
